[package]
name = "ff"
version = "2.0.0"
edition = "2021"
authors = ["nuaays"]
readme = "README.md"
homepage = "https://github.com/nuaays/ff"
license-file = "LICENSE"
description = "proxy"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
opt-level = 0
overflow-checks = false

[profile.release]
incremental = true
debug-assertions = false
overflow-checks = false
lto = true
opt-level = "z"
codegen-units = 1
panic = 'abort'
debug = false


[workspace]
members = [
    "./ff-api",
    "./ff-core",
    "./ff-socks"
]

[[bin]]
name = "fd"
path = "src/bin/server.rs"

[[bin]]
name = "fc"
path = "src/bin/client.rs"

[dependencies]
aes = {version = "0.7.5"}
rsa = {version = "0.5.0"}
rand = "0.8.4"
block-modes = "0.8.1"
hex-literal = "0.3.4"
log = {version = "0.4.14"}
clap = {version = "3.0.0-beta.5", features = ["yaml"]}
smol = {version = "1.2.5"}
bytes = {version = "1.1.0"}
futures = "0.3"
env_logger = "0.9.0"
ff-core = {path = "./ff-core"}
ff-socks = {path ="./ff-socks"}
rpassword = "5.0"
hex = "0.4.3"
async-trait = {version = "0.1.51"}